# openmovies-api

./: Cargo.toml
migrations/2023-07-31-072334_primary_stuff/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: api.rs
src/models/: movie.rs
src/repository/: database.rs  schema.rs
